refactor: remove deprecated VerticesData and migrate to service-based architecture
- Delete VerticesData and VerticesDataFacade legacy classes
- Delete VertexPopulationServiceOld
- Migrate all actions, strategies, contexts, and persistence to use GraphDomainService and GraphUiStateService directly
- Remove deprecated methods from VertexCreationService and VertexValidationService
- Simplify population strategies to use new service APIs