@@ -6,7 +6,7 @@ import ru.yanchenko.vlad.graphapp.models.domain.Graph;
 import ru.yanchenko.vlad.graphapp.models.vertex.Vertex;
 import ru.yanchenko.vlad.graphapp.models.vertex.VertexLink;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -14,7 +14,7 @@ public class GraphDomainService {
     private Graph currentGraph;
 
     public GraphDomainService() {
-        this.currentGraph = new Graph(new ArrayList<>(), new ArrayList<>());
+        this.currentGraph = new Graph(Collections.emptyList(), Collections.emptyList());
     }
 
     public Graph getCurrentGraph() {
@@ -26,46 +26,64 @@ public class GraphDomainService {
     }
 
     public void addVertex(Vertex vertex) {
-        List<Vertex> vertices = new ArrayList<>(currentGraph.getVertices());
-        vertices.add(vertex);
-        currentGraph = new Graph(vertices, currentGraph.getEdges());
+        currentGraph.getVertices().add(vertex);
     }
 
     public void removeVertex(int index) {
-        List<Vertex> vertices = new ArrayList<>(currentGraph.getVertices());
-        List<Edge> edges = new ArrayList<>(currentGraph.getEdges());
+        List<Vertex> vertices = currentGraph.getVertices();
+        List<Edge> edges = currentGraph.getEdges();
 
         if (index >= 0 && index < vertices.size()) {
             vertices.remove(index);
-
             // Remove edges connected to this vertex
             edges.removeIf(edge -> edge.from() == index || edge.to() == index);
-
             // Adjust indices for remaining edges
-            edges = edges.stream()
-                    .map(edge -> new Edge(
-                            edge.from() > index ? edge.from() - 1 : edge.from(),
-                            edge.to() > index ? edge.to() - 1 : edge.to()
-                    ))
-                    .collect(Collectors.toList());
-
-            currentGraph = new Graph(vertices, edges);
+            for (int i = edges.size() - 1; i >= 0; i--) {
+                Edge edge = edges.get(i);
+                int from = edge.from();
+                int to = edge.to();
+                if (from > index) {
+                    from--;
+                }
+                if (to > index) {
+                    to--;
+                }
+                edges.set(i, new Edge(from, to));
+            }
         }
     }
 
+    public void clearVertices() {
+        currentGraph.getVertices().clear();
+    }
+
+    public void clearEdges() {
+        currentGraph.getEdges().clear();
+    }
+
     public void addEdge(Edge edge) {
-        List<Edge> edges = new ArrayList<>(currentGraph.getEdges());
-        edges.add(edge);
-        currentGraph = new Graph(currentGraph.getVertices(), edges);
+        currentGraph.getEdges().add(edge);
     }
 
     public void removeEdge(Edge edge) {
-        List<Edge> edges = new ArrayList<>(currentGraph.getEdges());
-        edges.removeIf(e -> e.from() == edge.from() && e.to() == edge.to());
-        currentGraph = new Graph(currentGraph.getVertices(), edges);
+        currentGraph.getEdges().removeIf(e -> e.from() == edge.from() && e.to() == edge.to());
     }
 
-    // Conversion utilities for backward compatibility
+    public void removeEdge(int index) {
+        if (index > -1 && index < currentGraph.getEdges().size()) {
+            currentGraph.getEdges().remove(index);
+        } else {
+            throw new IndexOutOfBoundsException("Index out of bounds when removing edge");
+        }
+    }
+
+    /**
+     * Converts the current graph's edges to a list of legacy {@link VertexLink} objects.
+     * <p>
+     * Provided for backward compatibility with code that still uses {@code VertexLink}.
+     *
+     * @return a list of VertexLink instances representing the current edges
+     */
     public List<VertexLink> convertEdgesToLinks() {
         return currentGraph.getEdges().stream()
                 .map(edge -> new VertexLink(edge.from(), edge.to()))
@@ -75,7 +93,8 @@ public class GraphDomainService {
     public void updateFromLinks(List<VertexLink> links) {
         List<Edge> edges = links.stream()
                 .map(link -> new Edge(link.getLink1(), link.getLink2()))
-                .collect(Collectors.toList());
-        currentGraph = new Graph(currentGraph.getVertices(), edges);
+                .toList();
+        currentGraph.getEdges().clear();
+        currentGraph.getEdges().addAll(edges);
     }
 }
